--- a/about.html
+++ b/about.html
@@ -6,15 +6,18 @@
 
 <body>
 
+
+
     <header>
-        <a href="main.html"> <img src="pictures/fox.png" alt="logo" style="height: 50px;"></a>
+        <a href="https://github.com/MinhTT43/InnovationCampWeb/blob/master/index.html"> <img src="pictures/fox.png" alt="logo" style="height: 50px;"></a>
         <nav>
             <ul>
-                <li><a href="main.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="https://github.com/MinhTT43/InnovationCampWeb/blob/master/index.html">Home</a></li>
+                <li><a href="https://github.com/MinhTT43/InnovationCampWeb/blob/master/about.html">About</a></li>
+                <li><a href="https://github.com/MinhTT43/InnovationCampWeb/blob/master/contact.html">Contact</a></li>
             </ul>
         </nav>
+    </header>
     </header>
 
     <main>
