--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 
     <header>
-        <a href="main.html"> <img src="pictures/fox.png" alt="logo" style="height: 50px;"></a>
+        <a href="https://github.com/MinhTT43/InnovationCampWeb/blob/master/index.html"> <img src="pictures/fox.png" alt="logo" style="height: 50px;"></a>
         <nav>
             <ul>
-                <li><a href="main.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="https://github.com/MinhTT43/InnovationCampWeb/blob/master/index.html">Home</a></li>
+                <li><a href="https://github.com/MinhTT43/InnovationCampWeb/blob/master/about.html">About</a></li>
+                <li><a href="https://github.com/MinhTT43/InnovationCampWeb/blob/master/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -23,12 +23,16 @@
         <section class="container-info" id="section-one">
             <div id="info">
                 <div class="text-container-one">
-                    <h1>What is it?</h1>
+                    <h1>S T A Y - Preventing Dropout</h1>
                     <p>
-                        Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up
-                        one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33
-                        of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor
-                        sit amet..", comes from a line in section 1.10.32.
+                        Altfor mange barn i verden i dag mangler tilgang til utdanning helt, eller det tilbudet de har er for dårlig. Men det er også et stort problem at foreldrene i mange tilfeller rett og slett ikke sender barna på skolen i første omgang, eller holder dem
+                        igjen av ulike årsaker. Skal Redd Barna kunne gjøre noe med dette må de - 1. opparbeide seg kunnskap om hvorfor barn uteblir fra skolen, og 2. bruke denne kunnskapen til å beslutte hvor ressursene skal settes inn.
+
+                        <br> <br> Kunnskap om hvorfor barn uteblir fra skolen ligger lokalt hos lærere og kontaktpersoner. For å benytte denne kunnskapen må den samles inn. Vi foreslår at dette gjøres ved hjelp av en app som brukes av lærere/kontaktpersoner.
+                        Appen sender dataene direkte til Redd Barna når mobilen befinner seg, eller tas til et område med mobildekning, slik at det skal være mulig å benytte løsningen i land med varierende mobildekning. Mobiltelefonene deles ut til lærerne
+                        slik at man får dekket flest mulig elever uten at lærerne eller elevene trenger å ha råd til å kjøpe egen mobiltelefon. Vi har valgt Uganda som et karakteristisk land der løsningen vil fungere, hvor det er 65% mobildekning i dag
+                        i følge FN.
+
                     </p>
                 </div>
                 <div class="image-container-one">
