--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 
     <header>
-        <a href="https://github.com/MinhTT43/InnovationCampWeb/blob/master/index.html"> <img src="pictures/fox.png" alt="logo" style="height: 50px;"></a>
+        <a href="index.html"> <img src="pictures/fox.png" alt="logo" style="height: 50px;"></a>
         <nav>
             <ul>
-                <li><a href="https://github.com/MinhTT43/InnovationCampWeb/blob/master/index.html">Home</a></li>
-                <li><a href="https://github.com/MinhTT43/InnovationCampWeb/blob/master/about.html">About</a></li>
-                <li><a href="https://github.com/MinhTT43/InnovationCampWeb/blob/master/contact.html">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
