--- a/about.html
+++ b/about.html
@@ -19,9 +19,13 @@
 
     <main>
         <section class="container-one">
-            <div class="container-one-about">
+            <div class="container-one-about" style="width: 50%; margin: auto; text-align: center;">
                 <h1 class="heading1-about">About Us</h1>
+                <p>We are a gorup of students that created this concept of an application to track attendance in accordance with Innovation Camp. The goal of this applications is to utilize technology to track and store attendance of students in underdeveloped
+                    countries. Using the data that is gathered, the root problems preventing childeren from coming to school can be identified.
+                </p>
             </div>
+
         </section>
 </body>
 
