--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
     <section id="center">
         <div class="container">
-            <h3>Contact Us</h3>
+            <h3 style="color: #d57149;">Contact Us</h3>
             <div class="info">
                 <input type="text" class="input" placeholder="Your Name">
                 <input type="text" class="input" placeholder="Your Email">
